@@ -23,6 +23,7 @@
 #include <cmath>
 #include "Transforms.h"
 
+
 /* D65 temp 6504.
  */
 #define D65_X0 95.0470
@@ -39,7 +40,6 @@ static const float _sRGB[3][3] = { {  3.240479, -1.537150, -0.498535 },
 void filter_normalize( RawTile& in, std::vector<float>& max, std::vector<float>& min ) {
 
   float *normdata;
-  float v;
   unsigned int np = in.dataLength * 8 / in.bpc;
   unsigned int nc = in.channels;
 
@@ -107,8 +107,10 @@ void filter_normalize( RawTile& in, std::vector<float>& max, std::vector<float>&
 void filter_shade( RawTile& in, int h_angle, int v_angle ){
 
   float o_x, o_y, o_z;
+
   // Incident light angle
   float a = (h_angle * 2 * 3.14159) / 360.0;
+
   // We assume a hypotenous of 1.0
   float s_y = cos(a);
   float s_x = sqrt( 1.0 - s_y*s_y );
@@ -124,7 +126,7 @@ void filter_shade( RawTile& in, int h_angle, int v_angle ){
   s_y = s_y / s_norm;
   s_z = s_z / s_norm;
 
-  float *ptr, *buffer, *infptr;
+  float *buffer, *infptr;
 
   unsigned int k = 0;
   unsigned int ndata = in.dataLength * 8 / in.bpc;
@@ -133,7 +135,7 @@ void filter_shade( RawTile& in, int h_angle, int v_angle ){
   // Create new (float) data buffer
   buffer = new float[ndata];
 
-  for( int n=0; n<ndata; n+=3 ){
+  for( unsigned int n=0; n<ndata; n+=3 ){
     if( infptr[n] == 0. && infptr[n+1] == 0. && infptr[n+2] == 0. ) {
       o_x = o_y = o_z = 0.;
     }
@@ -276,11 +278,9 @@ void filter_LAB2sRGB( RawTile& in ){
 // Colormap function
 void filter_cmap( RawTile& in, enum cmap_type cmap ){
 
-  int i;
   float value;
   unsigned out_chan = 3;
   unsigned int ndata = in.dataLength * 8 / in.bpc / in.channels;
-  unsigned int k = 0;
 
   const float max3=1./3.;
   const float max8=1./8.;
@@ -292,7 +292,7 @@ void filter_cmap( RawTile& in, enum cmap_type cmap ){
   switch(cmap){
     case HOT:
 #pragma ivdep
-      for( int n=0; n<ndata; n++, outv+=3 ){
+      for( int unsigned n=0; n<ndata; n++, outv+=3 ){
         value = fptr[n];
         if(value>1.)
           { outv[0]=outv[1]=outv[2]=1.; }
@@ -309,7 +309,7 @@ void filter_cmap( RawTile& in, enum cmap_type cmap ){
       break;
     case COLD:
 #pragma ivdep
-      for( int n=0; n<ndata; n++, outv+=3 ){
+      for( unsigned int n=0; n<ndata; n++, outv+=3 ){
         value = fptr[n];
         if(value>1.)
           { outv[0]=outv[1]=outv[2]=1.; }
@@ -326,7 +326,7 @@ void filter_cmap( RawTile& in, enum cmap_type cmap ){
       break;
     case JET:
 #pragma ivdep
-      for( int n=0; n<ndata; n++, outv+=3 ){
+      for( unsigned int n=0; n<ndata; n++, outv+=3 ){
         value = fptr[n];
         if(value<0.)
           { outv[0]=outv[1]=outv[2]=0.; }
@@ -549,8 +549,8 @@ void filter_rotate( RawTile& in, float angle=0.0 ){
 
     // Rotate 270
     else if( (int) angle % 360 == 270 ){
-      for( int i=in.width; i>0; i-- ){
-	for( int j=0; j < in.height; j++ ){
+      for( unsigned int i=in.width; i>0; i-- ){
+	for( unsigned int j=0; j < in.height; j++ ){
 	  unsigned int index = (in.width*j + i)*in.channels;
 	  for( int k=0; k < in.channels; k++ ){
 	    if(in.bpc == 8) ((unsigned char*)buffer)[n++] = ((unsigned char*)in.data)[index+k];
@@ -621,4 +621,12 @@ void filter_greyscale( RawTile& rawtile ){
   // Update our number of channels and data length
   rawtile.channels = 1;
   rawtile.dataLength = np;
+}
+
+
+// Convert colour or multi-channel image
+void filter_twist( RawTile& rawtile, std::vector<float> matrix ){
+
+  
+
 }
